--- a/myproject/index/templates/index/index.html
+++ b/myproject/index/templates/index/index.html
@@ -1,144 +1,5 @@
-{% from 'macros.html' import nav_builder,post_builder %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Social Media Platfrom for Gamers! Singup Free! Hold championships and get prizes.">
-        <meta name="keywords" content="PUBG, CS:Go, World of War, Gamers, Championships">
-        <meta name="author" content="Karlo Tevzadze">
-        <meta property="og:title" content="GAMEHUB" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://marvelyko.github.io/gamehub.ge/index.html"/>
-        <meta property="og:image" content="">
-        <meta property="og:description" content="Social Media Platfrom for Gamers! Singup Free! Hold championships and get prizes." />
-        <title>GAMEHUB</title>
-       <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/reset.css') }}">
-       <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-       <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/fonts.css') }}">
-       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-       <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
-       <script src="{{url_for('static',filename='/js/post.js')}}"></script>
-</head>
-<body>
-        <header>
-                <div class="header">
-                        <div class="header-block">
-                                <a href="{{url_for('index.index')}}" class="logo">gamehub</a>
-                                <div>
-                                        <ul class="header-ul">
-                                                <li class="flex searchlogo"><img src="{{ url_for('static', filename='images/search.svg') }}" alt="search"></li>
-                                                <li class="flex donate"><a class="donation" href="#">donate</a></li>
-                                                <li class="flex eng">eng <img src="{{ url_for('static', filename='images/Polygon3.svg') }}" alt="triangle"></li>
-                                                {% if current_user.is_authenticated %}
-                                                <li >
-                                                        <nav class="dddnav">
-                                                                <div class="navcontainer">
-
-                                                                        <nav class="navinner">
-
-                                                                               <!--  <a href="javascript:void(0)" class="ddtriggermobile"><i class="material-icons">menu</i></a> -->
-                                                                                <a href="#0" class="profileddtrigger"><img src="{{url_for('static',filename='images/zappa.jpg')}}" /></a>
-                                                                                <!-- mobile main menu-->
-                                                                                <div class="ddcontainer mobilemenudd">
-                                                                                        <nav class="ddnav">
-                                                                                                <a href="#0"><span class="material-icons">dashboard</span><span>Dashboard</span></a>
-                                                                                                <a href="#0"><span class="material-icons">search</span><span>Search</span></a>
-                                                                                                <a href="#0"><span class="material-icons">insert_drive_file</span><span>Drafts</span></a>
-                                                                                        </nav>
-                                                                                </div>
-                                                              <!-- dropdown profile menu -->
-                                                                                <div class="ddcontainer profiledd">
-                                                                                        <a href="profile.html" class="ddheader">
-                                                                                                <a href="{{url_for('profile.profile_view',user_id=current_user.id)}}'"><img src="{{url_for('static',filename='images/zappa.jpg')}}"></a>
-                                                                                                <h5 class="ddname">{{current_user.name}}</h5><span class="ddtitle">Gamer</span>
-                                                                                        </a>
-                                                                                        <nav class="ddnav">
-                                                                                                <a href="notification.html"><span class="material-icons">notifications</span><span>Notifications</span></a>
-                                                                                                <a href="settings.html"><span class="material-icons">settings</span><span>Settings</span></a>
-                                                                                                <a href="support.html"><span class="material-icons">phone</span><span>Support</span></a>
-                                                                                                <a href="{{url_for('index.logout')}}"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
-                                                                                        </nav>
-                                                                                </div>
-                                                                        </nav>
-                                                                </div>
-                                                        </nav>
-                                                </li>
-                                                {% else %}
-                                                <li >
-                                                        <a href='/auth'><img class="useravatar" src="{{ url_for('static', filename='images/useravatar.png') }}" alt="avatar"></a>
-                                                </li>
-                                                {% endif %}
-                                        </ul>
-                                </div>
-                        </div>
-                </div>
-                <div class="header-2">
-                        <div class="header-block">
-                                <div>
-                                        <ul class="header-ul">
-                                                {% if current_user.is_authenticated %}
-                                                <li >
-                                                        <nav class="dddnav">
-                                                                <div class="navcontainer">
-
-                                                                        <nav class="navinner">
-
-                                                                               <!--  <a href="javascript:void(0)" class="ddtriggermobile"><i class="material-icons">menu</i></a> -->
-                                                                                <a href="#0" class="profileddtrigger"><img src="{{url_for('static',filename='images/zappa.jpg')}}" /></a>
-                                                                                <!-- mobile main menu-->
-                                                                                <div class="ddcontainer mobilemenudd">
-                                                                                        <nav class="ddnav">
-                                                                                                <a href="#0"><span class="material-icons">dashboard</span><span>Dashboard</span></a>
-                                                                                                <a href="#0"><span class="material-icons">search</span><span>Search</span></a>
-                                                                                                <a href="#0"><span class="material-icons">insert_drive_file</span><span>Drafts</span></a>
-                                                                                        </nav>
-                                                                                </div>
-                                                              <!-- dropdown profile menu -->
-                                                                                <div class="ddcontainer profiledd">
-                                                                                        <a href="profile.html" class="ddheader">
-                                                                                                <img src="{{url_for('static',filename='images/zappa.jpg')}}" />
-                                                                                                <h5 class="ddname">{{current_user.name}}</h5><span class="ddtitle">Gamer</span>
-                                                                                        </a>
-                                                                                        <nav class="ddnav">
-                                                                                                <a href="notification.html"><span class="material-icons">notifications</span><span>Notifications</span></a>
-                                                                                                <a href="settings.html"><span class="material-icons">settings</span><span>Settings</span></a>
-                                                                                                <a href="support.html"><span class="material-icons">phone</span><span>Support</span></a>
-                                                                                                <a href="{{url_for('index.logout')}}"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
-                                                                                        </nav>
-                                                                                </div>
-                                                                        </nav>
-                                                                </div>
-                                                        </nav>
-                                                </li>
-                                                {% else %}
-                                                <li >
-                                                        <a href='/auth'><img class="useravatar" src="{{ url_for('static', filename='images/useravatar.png') }}" alt="avatar"></a>
-                                                </li>
-                                                {% endif %}
-                                                <li class="flex searchlogo"><img src="{{ url_for('static', filename='images/search.svg') }}" alt="search"></li>
-                                                <li class="logo-2"><a href="index.html" class="logo">gamehub</a></li>
-                                                <li class="flex eng">eng <img src="{{ url_for('static', filename='images/Polygon3.svg') }}" alt="triangle"></li>
-                                                <li class="burger"><a href=""></a>
-                                                        <div></div>
-                                                        <div></div>
-                                                        <div></div>
-                                                        </a>
-                                                </li>
-                                        </ul>
-                                </div>
-                        </div>
-                </div>
-                <nav class="navigation">
-                        <ul class="nav-ul">
-                                <li class="nav-li">{{nav_builder('navbar.categories', 'categories')}}</li>
-                                <li class="nav-li">{{nav_builder('navbar.championship', 'championship')}}</li>
-                                <li class="nav-li">{{nav_builder('navbar.matches', 'matches')}}</li>
-                        </ul>
-                        
-                </nav>
-        </header>
+{% extends 'base.html' %}
+{% block content %}
         <div>
                 <div class="m-section"></div>
                 <div class="nrow">
@@ -203,53 +64,8 @@
                         </section>
                 </div>
         </div>
-        <footer>
-                <div class="footer">
-                        <div class="contain">
-                        <div class="col">
-                                <h3>gamehub</h3>
-                        </div>
-                        <div class="col">
-                                <h3>content</h3>
-                                <ul>
-                                        <a href="categories.html"><li>categories</li></a>
-                                        <a href="pubg-championship.html"><li>championship</li></a>
-                                        <a href="matches.html"><li>matches</li></a>
-                                </ul>
-                        </div>
-                        <div class="col">
-                                <h3>help</h3>
-                                <ul>
-                                        <li>support</li>
-                                        <li>FAQ</li>
-                                </ul>
-                        </div>
-                        <div class="col">
-                                <h3>company</h3>
-                                <ul>
-                                        <li>about</li>
-                                        <li>contact us</li>
-                                        <li>affilation</li>
-                                        <li>plans</li>
-                                </ul>
-                        </div>
-                        <div class="col social">
-                                <h3>social media</h3>
-                                <ul>
-                                        <a href="www.facebook.com"><li><img src="{{ url_for('static', filename='images/Facebook.svg') }}" alt="facebook"></li></a>
-                                        <a href="www.instagram.com"><li><img src="{{ url_for('static', filename='images/instagram.svg') }}" alt="instagram"></li></a>
-                                        <a href="www.twitter.com"><li><img src="{{ url_for('static', filename='images/twitter.svg') }}" alt="twitter"></li></a>
-                                </ul>
-                        </div>
-                        </div>
-                </div>
-                <hr>
-                <div class="copyright">Copyright © 2010-2020 Freepik Company S.L. All rights reserved.</div>
-
-        </footer>
         <script>                
                 addPosts()
         </script>
-        <script type="text/javascript" src="{{ url_for('static',filename='js/profilebar.js')}}"></script>
-</body>
-</html>
+
+{% endblock %}
