--- a/myproject/profile/templates/profile/profile.html
+++ b/myproject/profile/templates/profile/profile.html
@@ -1,77 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Social Media Platfrom for Gamers! Singup Free! Hold championships and get prizes.">
-        <meta name="keywords" content="PUBG, CS:Go, World of War, Gamers, Championships">
-        <meta name="author" content="Karlo Tevzadze">
-        <meta property="og:title" content="GAMEHUB" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://marvelyko.github.io/gamehub.ge/index.html"/>
-        <meta property="og:image" content="">
-        <meta property="og:description" content="Social Media Platfrom for Gamers! Singup Free! Hold championships and get prizes." />
-        <title>GAMEHUB</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
-</head>
-<body>
-        <header>
-                <div class="header">
-                        <div class="header-block">
-                                <a href="index.html" class="logo"><img src="assets/images/logo.svg" alt="Logo"></a>
-                                <div>
-                                        <ul class="header-ul">
-                                                <li class="flex searchlogo"><img src="assets/images/search.svg" alt="search"></li>
-                                                <li class="flex donate"><a class="donation" href="#">donate</a></li>
-                                                <li class="flex eng">eng <img src="assets/images/Polygon3.svg" alt="triangle"></li>
-                                                <li ><a href='registration.html'><img class="useravatar" src="assets/images/useravatar.png" alt="avatar"></a></li>
-                                        </ul>
-                                </div>
-                        </div>
-                </div>
-                <div class="header-2">
-                        <div class="header-block">
-                                <div>
-                                        <ul class="header-ul">
-                                                <li ><a href='registration.html'><img class="useravatar" src="assets/images/useravatar.png" alt="avatar"></a></li>
-                                                <li class="flex searchlogo"><img src="assets/images/search.svg" alt="search"></li>
-                                                <li class="logo-2"><a href="index.html" class="logo"><img src="assets/images/logo.svg" alt="Logo"></a></li>
-                                                <li class="flex eng">eng <img src="assets/images/Polygon3.svg" alt="triangle"></li>
-                                                <li class="burger"><a href=""></a>
-                                                        <div></div>
-                                                        <div></div>
-                                                        <div></div>
-                                                        </a>
-                                                </li>
-                                        </ul>
-                                </div>
-                        </div>
-                </div>
-                <nav class="navigation">
-                        <ul class="nav-ul">
-                                <li class="nav-li"><a href="categories.html">categories</a></li>
-                                <li class="nav-li"><a href="pubg-championship.html">championship</a></li>
-                                <li class="nav-li"><a href="matches.html">matches</a></li>
-                        </ul>
-                        
-                </nav>
-        </header>
-
+{% extends 'base.html' %}
+{% block content %}
         <div class="user-cover">
                 <ul class="user-profile-ul">
-                        <li class="user-profile-li"><a href="#"><div class="addclick" ><img src="assets/images/crossfriend.svg"></div></a></li>
+                        <li class="user-profile-li"><a href="#"><div class="addclick" ><img src="{{url_for('static',filename='/images/crossfriend.svg')}}"></div></a></li>
 
 <!--                         <li class="user-profile-li"><a href="#"><img class="addclick" src="assets/images/cross-add.svg" alt="add button"></a></li>
  -->                        <li class="user-profile-li">
-                                <div><a href="#"><img class="user-prof-pic" src="assets/images/Tortura.jpg"></a></div>
+                                <div><a href="">
+                                        {% if active %}
+                                        <img class="user-prof-pic active-user" src="{{url_for('static',filename=user.photo)}}">
+                                        {% else %}
+                                        <img class="user-prof-pic active-user" src="{{url_for('static',filename=user.photo)}}">
+                                        {% endif %}
+                                </a></div>
                         </li>
-                        <li class="user-profile-li"><a href="#"><div class="addclick" ><img src="assets/images/messagelogo.svg"></div></a></li>
+                        <li class="user-profile-li"><a href="#"><div class="addclick" ><img src="{{url_for('static',filename='/images/messagelogo.svg')}}"></div></a></li>
 
                         <!-- <li class="user-profile-li"><a href="#"><img src="assets/images/chat-button.svg" alt="chat"></a></li> -->
                 </ul>
-                <p class="up-username">USERNAME</p>
+                <p class="up-username">{{user.name}}</p>
                 <div class="up-follow">
                         <div>
                                 <ul style= "display: flex; padding: 15px 0;">
@@ -100,194 +47,28 @@
                         <li><a href="#">timeline</a></li>
                         <li><a href="#">about</a></li>
                         <li><a href="#">trophies</a></li>
-                        <li><a href="#">more<img src="assets/images/Polygon3.svg"></a></li>
+                        <li><a href="#">more<img src="{{url_for('static',filename='/images/Polygon3.svg')}}"></a></li>
                 </ul>
+                {% if current_user.id == user.id %}
                 <a href="#"><div class="ed-prof">
                         <a href="#"><ul>
                                 <li class="editprofile"><div ></div></li>
                                 <li class="editprofile"><p>edit profile</p></li>
                         </ul></a>
                 </div></a>
+                {% endif %}
         </div>
         <div class="user-pic-video">
                 <div class="pic-box">
                         <div>
                                 <div class="likeorcomment hvr-sweep-to-top">
                                         <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
-                                        </ul>
-                                        
-                                </div>
-                        </div>
-                </div>
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="assets/images/like.png"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="assets/images/comment.png"></li></a>
+                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="{{url_for('static',filename='/images/like.png')}}"></li></a>
+                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="{{url_for('static',filename='images/comment.png')}}"></li></a>
                                         </ul>
                                         
                                 </div>
                         </div>
                 </div>
         </div>
-
-
-        <footer>
-                <div class="footer">
-                        <div class="contain">
-                        <div class="col">
-                                <h3>gamehub</h3>
-                        </div>
-                        <div class="col">
-                                <h3>content</h3>
-                                <ul>
-                                        <a href="categories.html"><li>categories</li></a>
-                                        <a href="pubg-championship.html"><li>championship</li></a>
-                                        <a href="matches.html"><li>matches</li></a>
-                                </ul>
-                        </div>
-                        <div class="col">
-                                <h3>help</h3>
-                                <ul>
-                                        <li>support</li>
-                                        <li>FAQ</li>
-                                </ul>
-                        </div>
-                        <div class="col">
-                                <h3>company</h3>
-                                <ul>
-                                        <li>about</li>
-                                        <li>contact us</li>
-                                        <li>affilation</li>
-                                        <li>plans</li>
-                                </ul>
-                        </div>
-                        <div class="col social">
-                                <h3>social media</h3>
-                                <ul>
-                                        <a href="www.facebook.com"><li><img src="assets/images/Facebook.svg" alt="facebook"></li></a>
-                                        <a href="www.instagram.com"><li><img src="assets/images/instagram.svg" alt="instagram"></li></a>
-                                        <a href="www.twitter.com"><li><img src="assets/images/twitter.svg" alt="twitter"></li></a>
-                                </ul>
-                        </div>
-                        </div>
-                </div>
-                <hr>
-                <div class="copyright">Copyright © 2010-2020 Freepik Company S.L. All rights reserved.</div>
-
-        </footer>
-</body>
-</html>
+{% endblock %}
