--- a/myproject/auth/templates/auth/auth.html
+++ b/myproject/auth/templates/auth/auth.html
@@ -19,7 +19,7 @@
 				{{ regForm.email(placeholder="Email") }}
 				{{ regForm.password(placeholder="Password")}}
 				{{ regForm.pass_confirm(placeholder="Repeat Password") }}
-				{{ regForm.submit(class="submit") }}
+				{{ regForm.submit(class="reg-submit") }}
 			</form>
 		</div>
 		<div class="form-reg-container sign-in-reg-container">
@@ -30,7 +30,7 @@
 				{{ loginForm.email(placeholder="Email or Username")}}
 				{{ loginForm.password(placeholder="Password")}}
 				<a href="#">Forgot your password?</a>
-				{{ loginForm.submit(class="submit") }}
+				{{ loginForm.submit(id="reg-submit") }}
 			</form>
 		</div>
 		<div class="overlay-reg-container">
