--- a/myproject/profile/templates/profile/profile.html
+++ b/myproject/profile/templates/profile/profile.html
@@ -4,16 +4,71 @@
                 <ul class="user-profile-ul">
                         <li class="user-profile-li"><a href="#"><div class="addclick" ><img src="{{url_for('static',filename='/images/crossfriend.svg')}}"></div></a></li>
 
-<!--                         <li class="user-profile-li"><a href="#"><img class="addclick" src="assets/images/cross-add.svg" alt="add button"></a></li>
- -->                        <li class="user-profile-li">
-                                <div><a href="">
-                                        {% if active %}
-                                        <img class="user-prof-pic active-user" src="{{url_for('static',filename=user.photo)}}">
-                                        {% else %}
-                                        <img class="user-prof-pic active-user" src="{{url_for('static',filename=user.photo)}}">
-                                        {% endif %}
-                                </a></div>
+                        <li class="user-profile-li">
+                            {% if active %}
+                            <nav class="dddnav">
+                                    <div class="usernavcontainer">
+                                        <nav class="navinner">
+                                        <img class="user-prof-pic" src="{{url_for('static',filename=user.photo)}}">
+                                            <div class="active-user"></div>
+                                        <div class="userprofpiccontainer profiledd">
+                                                <nav class="ddnav">
+                                                    <a href="#">
+                                                        <button id="myBtn" class="vpp-button">View Profile Picture</button>
+                                                    </a>
+
+                                                    <a href="#">
+                                                        <button id="myBtn" class="vpp-button">Update Profile Picture</button>
+                                                    </a>
+
+                                                </nav>
+                                            </div>
+                                            <div id="myModal" class="modal">
+
+                                              <!-- Modal content -->
+                                              <div class="modal-content">
+                                                <span class="close">&times;</span>
+                                                <img class="profile-pic-modal" src="assets/images/Tortura.jpg">
+                                              </div>
+
+                                            </div>
+                                        </nav>
+                                    </div>
+                                </nav>
+
+                            {% else %}
+                            <nav class="dddnav">
+                                    <div class="usernavcontainer">
+                                        <nav class="navinner">
+                                        <img class="user-prof-pic" src="{{url_for('static',filename=user.photo)}}">
+                                        <div class="userprofpiccontainer profiledd">
+                                                <nav class="ddnav">
+                                                    <a href="#">
+                                                        <button id="myBtn" class="vpp-button">View Profile Picture</button>
+                                                    </a>
+
+                                                    <a href="#">
+                                                        <button id="myBtn" class="vpp-button">Update Profile Picture</button>
+                                                    </a>
+
+                                                </nav>
+                                            </div>
+                                            <div id="myModal" class="modal">
+
+                                              <!-- Modal content -->
+                                              <div class="modal-content">
+                                                <span class="close">&times;</span>
+                                                <img class="profile-pic-modal" src="assets/images/Tortura.jpg">
+                                              </div>
+
+                                            </div>
+                                        </nav>
+                                    </div>
+                                </nav>
+                                {% endif %}
                         </li>
+
+
                         <li class="user-profile-li"><a href="#"><div class="addclick" ><img src="{{url_for('static',filename='/images/messagelogo.svg')}}"></div></a></li>
 
                         <!-- <li class="user-profile-li"><a href="#"><img src="assets/images/chat-button.svg" alt="chat"></a></li> -->
@@ -23,16 +78,9 @@
                         <div>
                                 <ul style= "display: flex; padding: 15px 0;">
                                         <li class="up-follow-pic hvr-float"><a href="#"><img src="assets/images/Tortura.jpg" alt="userpicture"></a></li>
-                                        <li class="up-follow-pic hvr-float"><a href="#"><img src="assets/images/Kakashi.jpg" alt="userpicture"></a></li>
-                                        <li class="up-follow-pic hvr-float"><a href="#"><img src="assets/images/Ninja.jpg" alt="userpicture"></a></li>
-                                        <li class="up-follow-pic hvr-float"><a href="#"><img src="assets/images/Zappa.jpg" alt="userpicture"></a></li>
                                         <li class="up-followers"><p><span>following</span></br> +27K</p></li>
                                         <li class="up-follow-va"><a href="#"><p>view all</p></a></li>
                                         <li><div class="div-line"></div></li>
-                                        <li class="up-follow-pic hvr-float"><a href="#"><img src="assets/images/Tortura.jpg" alt="userpicture"></a></li>
-                                        <li class="up-follow-pic hvr-float"><a href="#"><img src="assets/images/Kakashi.jpg" alt="userpicture"></a></li>
-                                        <li class="up-follow-pic hvr-float"><a href="#"><img src="assets/images/Ninja.jpg" alt="userpicture"></a></li>
-                                        <li class="up-follow-pic hvr-float"><a href="#"><img src="assets/images/Zappa.jpg" alt="userpicture"></a></li>
                                         <li class="up-followers"><p><span>followers</span></br> +13K</p></li>
                                         <li class="up-follow-va"><a href="#"><p>view all</p></a></li>
                                         
@@ -59,16 +107,24 @@
                 {% endif %}
         </div>
         <div class="user-pic-video">
-                <div class="pic-box">
-                        <div>
-                                <div class="likeorcomment hvr-sweep-to-top">
-                                        <ul>
-                                                <a href="#"><li class="ertia1"><img class="vcadot1" src="{{url_for('static',filename='/images/like.png')}}"></li></a>
-                                                <a href="#"><li class="ertia2"><img class="vcadot2" src="{{url_for('static',filename='images/comment.png')}}"></li></a>
-                                        </ul>
-                                        
-                                </div>
+                {% if current_user.id == user.id %}
+		<div class="user-pic-add">
+			<div class="cross">
                         </div>
-                </div>
+                </div>				
+                {% endif %}
+		<div class="pic-box">
+			<div>
+				<div class="likeorcomment hvr-sweep-to-top">
+					<ul>
+						<a href="#"><li class="ertia1"><img class="vcadot1" src="{{url_for('static',filename='images/like.png')}}"><p>212</p></li></a>
+						<a href="#"><li class="ertia2"><img class="vcadot2" src="{{url_for('static',filename='images/comment.png')}}"><p>122</p></li></a>
+					</ul>
+						
+				</div>
+			</div>
+		</div>
         </div>
+
+        <script src="{{url_for('static',filename='js/userprofilepic.js')}}"
 {% endblock %}
