--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -19,7 +19,8 @@
        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
        <link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-       <script src="{{url_for('static',filename='/js/post.js')}}"></script>
+       {% block scripts %}
+       {% endblock %}
 </head>
 <body>
         <header>
@@ -58,7 +59,7 @@
                                                                                                 <a href="notification.html"><span class="material-icons">notifications</span><span>Notifications</span></a>
                                                                                                 <a href="settings.html"><span class="material-icons">settings</span><span>Settings</span></a>
                                                                                                 <a href="support.html"><span class="material-icons">phone</span><span>Support</span></a>
-                                                                                                <a href="{{url_for('index.logout')}}"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
+                                                                                                <a href="{{url_for('auth.logout')}}"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
                                                                                         </nav>
                                                                                 </div>
                                                                         </nav>
@@ -105,7 +106,7 @@
                                                                                                 <a href="notification.html"><span class="material-icons">notifications</span><span>Notifications</span></a>
                                                                                                 <a href="settings.html"><span class="material-icons">settings</span><span>Settings</span></a>
                                                                                                 <a href="support.html"><span class="material-icons">phone</span><span>Support</span></a>
-                                                                                                <a href="{{url_for('index.logout')}}"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
+                                                                                                <a href="{{url_for('auth.logout')}}"><span class="material-icons">exit_to_app</span><span>Logout</span></a>
                                                                                         </nav>
                                                                                 </div>
                                                                         </nav>
